<resources>
    <string name="app_name">AshokGoyal</string>
    <string name="pass_hint">Password...</string>
    <string name="email_hint">Your Email...</string>
    <string name="login_logo_desc">Logo Login Page</string>
    <string name="login_btn_text">Login to account</string>
    <string name="login_reg_btn_text">Need a new Account?</string>
    <string name="action_search_text">Search</string>
    <string name="action_setting_text">Account Settings</string>
    <string name="action_logout_text">Logout</string>
    <string name="reg_btn_text">Create new Account</string>
    <string name="reg_login_text">Already have an Account?</string>
    <string name="reg_pass_text">Password...</string>
    <string name="reg_confirm_pass_text">Confirm Password...</string>
    <string name="setup_name_hint">Your Name...</string>
    <string name="setup_save_btn">Save Account Settings</string>
    <string name="setup_name_hint_text">Your Name ...</string>
    <string name="setup_btn_name_text">Save Account Settings</string>
    <string name="post_desc_hint">Add Description ...</string>
    <string name="new_post_btn_hint">Post Blog</string>
    <string name="bottom_home_text">Home</string>
    <string name="bottom_notification_text">Notification</string>
    <string name="bottom_ac_text">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_about">about</string>

    <string name="large_text">
        A Leader Passionate for Success

Ashok Kumar Goel is one of the founders of GP Global, a business that he co-founded in 1998 and today operates globally in the downstream and midstream sectors of the oil and energy industry. It has expanded into four continents with six business units; oil refining, grease manufacturing, oil storage, bitumen manufacturing, shipping, trading and bunkering. Combined its business activities now account for a $3.2 billion turnover.

Entrepreneurial drive of Ashok Goyal began when, together with his brother, they began trading in petrochemical products in Delhi and Gujarat in 1993. Ambition of Ashok is to to build a business beyond the borders of India brought the brothers to the UAE, having previously identified a demand for refined petroleum-based oils and lubricants in the UAE. It led to the establishment of the first refinery in Hamriyah Free Zone in Sharjah and soon after a terminal Fujairah.

Ashok has remained at the heart of GP Global operation ever since, providing a technical insight that has helped it diversify its product portfolio to ensure storage units offer customer-specific grades, that the refineries are state-of-the-art with distillation columns capable of handling a large spectrum of petroleum-based feedstock and ensuring the company retains control over the supply chain with its own shipping unit.

Today Ashok sits on the board as its Chairman and is consistently injecting an entrepreneurial spirit into GP Global through continued investments in plant manufacturing facilities and research that explore new technologies and develop innovative products for industrial applications.



Outside GP Global, Ashok is equally committed to the continuation of legacy of his grandfather to make a difference in society through the ASPAM Foundation, which is a growing charity that provides practical support, such as shelter, education and healthcare, to improve quality of life of children, advance their rights and give them a better future. Aiming to make a difference to lives of peoples, more importantly to the lives of under privileged, he has been instrumental in establishing Smt. Reshma Devi Goyal Eye and Dental Care Centre a 12-bed hospital with an Operation Theatre, that provides free services for eye consultations, cataract surgeries, dental treatments and recently opened the gynecology division giving free services to the poor and needy.


Commitment of Ashok is to local communities has also led the establishment of ASPAM Indian International School which opened its campus in Sharjah in 2013. The school is renowned for providing developmental programs that not only encourage learning but also the love of learning. As founder of the school, Ashok remains intrinsically involved as its Chairman.



A Leader Who Knows Who He is and His Place in the World

If we now look at professional life cycle of Mr. Ashok Goel it is as ambitious, adventurous and embarking for all of us.

GP Global Group foundation is made in the early 90s, when brothers Ashok Goel and Sudhir Goyel began with trading of petrochemical products in Delhi and Gujarat in India. In 1998, after having established the business activities in India, they expanded the business activities in Sharjah, United Arab Emirates and named the company GP Global. In the year 2013, the group achieved a turnover of $3.2 Billion.

Within a few years of the commissioning of a distillation refinery, it has established itself into 4 Strategic Business Units; Refining and Manufacturing, Oil Trading, Storage Terminals and Shipping and Logistics. All these units support each other and make GP Global a well-integrated business.


With ambition of GP Global to be an eminent player globally in oil space and with a vision to become a global oil conglomerate, the company focuses in providing integrated solutions to its customers and creating unique value for its stakeholders. It continues to have more and more global synergies and GP Global is optimistic about its continuous growth in top line and profits in the coming years.

Its state-of-the-art processes that allow GP Global Group to fully realize amazing capacity of oil is to be recycled and reused indefinitely with no loss of quality. The success of its refinery was harnessed by commissioning a state-of-the-art PLC-based Condensate Splitter taking the combined capacity to about 500 MT per day, with storage of 35,000 cbm to handle different feedstock and finished products. Its port facility features 14 tanks with additional capacity of 35,000 cbm which makes a combined capacity of 70,000 m3 to handle various petroleum products. Recently, GP Global has added a Hydrocarbon Distillation Plant capacity 3500 bpd which equals to annual capacity of 1.2775 m barrel per annum and a Hydro-skimming Plant capacity of 250 MT/Day which equals to annual capacity of 91250 MT per annum in Dar-es-Salaam, Tanzania.

Today, GP Global has presence globally, to support its vision for going global and looking to expand its business providing a turnkey solutions to its customers.
utton



A Leader who Walks the Talk



Ashok Goel the founder and Chairman of GP Global Group, a leading player in the oil industry, specializing in Oil Trading and Bunkering, Oil Refining, Grease Manufacturing, Oil Storage Terminals, Bitumen Manufacturing, and Shipping and Logistics. Headquartered in United Arab Emirates, and having a presence in South Asia, the Far East, Africa and Europe, GP Global has emerged as one of the well-established manufacturers and traders of petroleum products in major parts of the world. Ongoing expansion plans includes opening a new Terminal storage in Hamriyah Freezone in Sharjah, setting up new refinery in Tanzania. Recently the Group opened a trading offices in Rotterdam and London, and soon in Lagos and Kuala Lumpur that will continue to increase its global presence. Success story of GP Global Group has always been grounded in integration across the business function but growing inorganically has played an important role in realizing the aspirations of the organization.

Below are some of the recent growth stories of the group:

•	Acquisition of Sah Petroleums Ltd, INDIA – With the determination to broaden the spread of Group , Mr. Ashok took the lead to invest into new businesses looking at inorganic growth by acquiring healthy businesses as well as recognizing those that are undervalued. This paved the way for acquiring Sah Petroleums Ltd (now GP Petroleums Ltd), a 40-year-old public limited Indian company, which specializes in the manufacturing and marketing of industrial and automotive lubricants and greases. Under his wise leadership, within eight months, GP Petroleums Ltd. has more than doubled its market capitalization.

•	Partnership with REPSOL, SPAIN – Mr. Ashok has also led the group into a strategic partnership with No. 1 petroleum company of Spain, Repsol, to exclusively manufacture and market superior and comprehensive line of premium quality lubricants of Repsol across India, thus unfolding a new chapter in the history of the operations of Indian company.

•	Acquisition of ESSAR PETROLEUM EAST AFRICA – With aspiration of Mr Ashok for GP Global to be a well-known global player in the oil space, the Group continues to have more and more global synergies. Recently GP Global announced the official acquisition and name change of Essar Petroleum East Africa Ltd to ASPAM Energy (Kenya) Ltd – A part of GP Global Group. The deal will enhance the integrated services and products of group for the downstream supply chain in the oil and gas sector in East Africa.







Leadership of Mr. Ashok is about being a wise leader who values his team. He believes that success is achieved with the help of others. What is more, genuine appreciation provides encouragement, develops confidence, and builds on strengths. He is a diligent leader who works with perseverance in conviction, courage, creativity and compassion.
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
</resources>
